playbooks/cluster/templates/manifests/02-apps/01-nextcloud/04-nextcloud.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: nextcloud
  name: nextcloud
  labels:
    kalexlab.xyz/app: nextcloud
    kalexlab.xyz/component: nextcloud
spec:
  type: ClusterIP
  ports:
    - name: nextcloud
      port: 80
      protocol: TCP
  selector:
    kalexlab.xyz/app: nextcloud
    kalexlab.xyz/component: nextcloud
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: nextcloud
  name: nextcloud
  labels:
    kalexlab.xyz/app: nextcloud
    kalexlab.xyz/component: nextcloud
  annotations:
    ignore-check.kube-linter.io/no-read-only-root-fs: "Apache is a nightmare"
    ignore-check.kube-linter.io/run-as-non-root: "Nextcloud drops privs (+ it is a nightmare)"
spec:
  serviceName: nextcloud
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: nextcloud
      kalexlab.xyz/component: nextcloud
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: nextcloud
        kalexlab.xyz/component: nextcloud
    spec:
      restartPolicy: Always
      containers:
        - name: nextcloud
          image: "nextcloud:latest"
          imagePullPolicy: Always

          ports:
            - containerPort: 80
              protocol: TCP

          resources:
            requests:
              memory: 200Mi
              cpu: 10m
            limits:
              memory: 1Gi
              cpu: 2000m

          readinessProbe:
            httpGet:
              path: /status.php
              port: 80
              httpHeaders:
                - name: Host
                  value: nextcloud.nextcloud.svc.cluster.local
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /status.php
              port: 80
              httpHeaders:
                - name: Host
                  value: nextcloud.nextcloud.svc.cluster.local
            failureThreshold: 3
            periodSeconds: 30

          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-www-pvc
            - mountPath: /var/www/html/data
              name: nextcloud-data-pvc
              subPath: data

      enableServiceLinks: false
      automountServiceAccountToken: false

      securityContext:
        fsGroup: 33
        fsGroupChangePolicy: "OnRootMismatch"

  volumeClaimTemplates:
    - metadata:
        name: nextcloud-data-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 100Gi
    - metadata:
        name: nextcloud-www-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 5Gi
