playbooks/cluster/templates/manifests/02-apps/01-nextcloud/01-network-policies.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: nextcloud
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: nextcloud
  name: allow-egress-cluster-dns
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: coredns
      ports:
        - protocol: UDP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: nextcloud
  name: nextcloud
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: nextcloud
      kalexlab.xyz/component: nextcloud
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: nextcloud
              kalexlab.xyz/component: database
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 192.168.0.0/16
              - 172.16.0.0/20
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: nextcloud
  name: database
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: nextcloud
      kalexlab.xyz/component: database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: adminerevo
          podSelector:
            matchLabels:
              kalexlab.xyz/app: adminerevo

        - podSelector:
            matchLabels:
              kalexlab.xyz/app: nextcloud
              kalexlab.xyz/component: nextcloud
      ports:
        - protocol: TCP
          port: 5432
